--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,1 +1,184 @@
-<div>HELLO WORLD YOU ARE IN AUTHORS</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/main.css">
+    <title>Portfolio</title>
+</head>
+<body>
+    
+    <div class="frame">
+        <div class="main_frame">
+            <!-- LEFT-FRAME -->
+            <div class="left_frame">
+
+                <!-- AUTHOR -->
+                <div class="author">
+                    <img class="author_img" src="/author/images/profile.jpeg" alt="Profile Pic" width="156" height="135">
+                    <h2><%=user.name%></h2>
+                    <p><%=user.profession%></p>
+                    <div class="social_media">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="#"><i class="fa fa-youtube""></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                
+                <!-- ABOUT-1 -->
+                <div class="author_about-1">
+                    <div class="about-1">
+                        <h2 class="about-1-left">Age:</h2>
+                        <h2 class="about-1-right"><%=user.age%></h2>
+                    </div>
+                    <div class="about-1">
+                        <h2 class="about-1-left">Residence:</h2>
+                        <h2 class="about-1-right"><%=user.residence%></h2>
+                    </div>
+                    <div class="about-1">
+                        <h2 class="about-1-left">Freelance:</h2>
+                        <h2 class="about-1-right available">Available</h2>
+                    </div>
+                    <div class="about-1">
+                        <h2 class="about-1-left">Address:</h2>
+                        <h2 class="about-1-right"><%=user.address%></h2>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+
+                <!-- ABOUT-2 -->
+                <div class="author_about-2">
+                    <h2 class="about-tittle">Languages</h2>
+                    <div class="about-2-wrapper">
+                        <div class="wrapper-1">
+                            <div class="wrapper-1-1">
+                                <h2 class="wrapper-1-1-left"><%=user.language[0]%></h2>
+                                <h2 class="wrapper-1-1-right">100%</h2>
+                            </div>
+                            <div class="wrapper-1-2">
+                                <div class="progress" style="width: 100%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="wrapper-1">
+                            <div class="wrapper-1-1">
+                                <h2 class="wrapper-1-1-left"><%=user.language[1]%></h2>
+                                <h2 class="wrapper-1-1-right">80%</h2>
+                            </div>
+                            <div class="wrapper-1-2">
+                                <div class="progress" style="width: 80%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="wrapper-1">
+                            <div class="wrapper-1-1">
+                                <h2 class="wrapper-1-1-left"><%=user.language[2]%></h2>
+                                <h2 class="wrapper-1-1-right">60%</h2>
+                            </div>
+                            <div class="wrapper-1-2">
+                                <div class="progress" style="width: 60%;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+
+                <!-- ABOUT-3 -->
+                <div class="author_about-2">
+                    <h2 class="about-tittle">Skills</h2>
+                    <div class="about-2-wrapper">
+                        <div class="wrapper-1">
+                            <div class="wrapper-1-1">
+                                <h2 class="wrapper-1-1-left"><%=user.skills[0]%></h2>
+                                <h2 class="wrapper-1-1-right">90%</h2>
+                            </div>
+                            <div class="wrapper-1-2">
+                                <div class="progress" style="width: 90%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="wrapper-1">
+                            <div class="wrapper-1-1">
+                                <h2 class="wrapper-1-1-left"><%=user.skills[1]%></h2>
+                                <h2 class="wrapper-1-1-right">85%</h2>
+                            </div>
+                            <div class="wrapper-1-2">
+                                <div class="progress" style="width: 85%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="wrapper-1">
+                            <div class="wrapper-1-1">
+                                <h2 class="wrapper-1-1-left"><%=user.skills[2]%></h2>
+                                <h2 class="wrapper-1-1-right">80%</h2>
+                            </div>
+                            <div class="wrapper-1-2">
+                                <div class="progress" style="width: 80%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="wrapper-1">
+                            <div class="wrapper-1-1">
+                                <h2 class="wrapper-1-1-left"><%=user.skills[3]%></h2>
+                                <h2 class="wrapper-1-1-right">75%</h2>
+                            </div>
+                            <div class="wrapper-1-2">
+                                <div class="progress" style="width: 75%;"></div>
+                            </div>
+                        </div>
+
+                        <div class="wrapper-1">
+                            <div class="wrapper-1-1">
+                                <h2 class="wrapper-1-1-left"><%=user.skills[4]%></h2>
+                                <h2 class="wrapper-1-1-right">85%</h2>
+                            </div>
+                            <div class="wrapper-1-2">
+                                <div class="progress" style="width: 85%;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+
+                <!-- ABOUT-4 -->
+                <div class="author_about-4">
+                    <h2 class="about-tittle">Extra Skills</h2>
+                    <div class="wrapper-2">
+                        <div class="wrapper-2-2">
+                            <img src="/author/menu_icon/Icons.svg" width="15" height="15">
+                            <h2>Bootstrap, Materialize</h2>
+                        </div>
+                        <div class="wrapper-2-2">
+                            <img src="/author/menu_icon/Icons.svg" width="15" height="15">
+                            <h2>Stylus, Sass, Less</h2>
+                        </div>
+                        <div class="wrapper-2-2">
+                            <img src="/author/menu_icon/Icons.svg" width="15" height="15">
+                            <h2>Gulp, Webpack, Grunt</h2>
+                        </div>
+                        <div class="wrapper-2-2">
+                            <img src="/author/menu_icon/Icons.svg" width="15" height="15">
+                            <h2>GIT Knowledge</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+
+            </div>
+            
+            <!-- MIDD-FRAME -->
+            <div class="midd_frame"></div>            
+
+            <!-- RIGHT-FRAME -->
+            <div class="right_frame"></div>
+        </div>
+    </div>
+    
+</body>
+</html>
