feat: completed midd and right frame

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -173,10 +173,107 @@
             </div>
             
             <!-- MIDD-FRAME -->
-            <div class="midd_frame"></div>            
+            <div class="midd_frame">
+                <!-- HERO -->
+                <div class="hero">
+                    <!-- BACKGROUN ICONS -->
+                    <img class="el-1" src="/author/icon/Ellipse.svg" width="16" height="15">
+                    <img class="el-2" src="/author/icon/Ellipse-green.svg" width="16" height="15">
+                    <img class="re-1" src="/author/icon/Rectangle-blue.svg" width="16" height="15">
+                    <img class="el-3" src="/author/icon/Ellipse-green.svg" width="16" height="15">
+                    <img class="el-4" src="/author/icon/Ellipse.svg" width="16" height="15">
+                    <img class="re-2" src="/author/icon/Rectangle.svg" width="16" height="15">
+                    <img class="po-1" src="/author/icon/Polygon.svg" width="16" height="15">
+                    <div class="hero-wrapper">
+                        <div class="hero-about">
+                            <h2>Doctor neurologists <br> in OHSU Hospital</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, volutpat feugiat placerat lobortis. Natoque rutrum semper sed suspendisse nunc lectus.</p>
+                            <a href="#" class="hero-btn">HIRE ME 
+                                <img class="hero-btn_icon" src="/author/btn_icon/Vector.svg" alt="hero btn">
+                            </a>
+                        </div>
+                        <img class="hero-img" src="/author/images/profile-2.png" alt="author image">
+                    </div>
+                </div>
+
+                <!-- FEATURE -->
+                <div class="feature">
+                    <h2 class="feature-title">My Services</h2>
+                    <p class="feature-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. <br> lorem ipsum</p>
+
+                    <div class="box-wrapper">
+                        <div class="box box-1">
+                            <img src="/author/box-icon/Icons_coding.svg" width="68" height="68">
+                            <h2>web development</h2>
+                            <p>blog, e-commerce</p>
+                        </div>
+                        <div class="box box-2">
+                            <img src="/author/box-icon/Icons_illustration.svg" width="68" height="68">
+                            <h2>uI/uX design</h2>
+                            <p>Mobile app, website design</p>
+                        </div>
+                        <div class="box box-3">
+                            <img src="/author/box-icon/Icons_Microphone.svg" width="74" height="74">
+                            <h2>sound design</h2>
+                            <p>Voice Over, Beat Making</p>
+                        </div>
+                        <div class="box box-4">
+                            <img src="/author/box-icon/Icons_game-development.svg" width="74" height="74">
+                            <h2>game design</h2>
+                            <p>Character Design, Props & Objects</p>
+                        </div>
+                        <div class="box box-5">
+                            <img src="/author/box-icon/Icons_Photographer.svg" width="78" height="78">
+                            <h2>photography</h2>
+                            <p>portrait, product photography</p>
+                        </div>
+                        <div class="box box-6">
+                            <h2>Advertising</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae nulla diam in ac dictum a urna viverra morbi. </p>
+                            <a class="box-link" href="#">order now 
+                                <img src="/author/box-icon/Frame.svg" width="20" height="20">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>            
 
             <!-- RIGHT-FRAME -->
-            <div class="right_frame"></div>
+            <div class="right_frame">
+                <img class="right_frame-img" src="/author/menu_icon/dark-mode.svg" width="30" height="30">
+
+                <div class="menu">
+                    <div class="menu-item">
+                        <div class="tooltip">Home</div>
+                        <img src="/author/menu_icon/Icons_Home.svg" alt="Home" width="18" height="18">
+                    </div>
+
+                    <div class="menu-item">
+                        <div class="tooltip">Service</div>
+                        <img src="/author/menu_icon/Icons_Service.svg" alt="Service" width="18" height="18">
+                    </div>
+
+                    <div class="menu-item">
+                        <div class="tooltip">Cv</div>
+                        <img src="/author/menu_icon/Icons_Cv.svg" alt="Cv" width="18" height="18">
+                    </div>
+
+                    <div class="menu-item">
+                        <div class="tooltip">Portfolio</div>
+                        <img src="/author/menu_icon/Icons_Portfolio.svg" alt="Portfolio" width="18" height="18">
+                    </div>
+
+                    <div class="menu-item">
+                        <div class="tooltip">Blog</div>
+                        <img src="/author/menu_icon/Icons_Blog.svg" alt="Blog" width="18" height="18">
+                    </div>
+
+                    <div class="menu-item">
+                        <div class="tooltip">Contact</div>
+                        <img src="/author/menu_icon/Icons_Contact.svg" alt="Contact" width="18" height="18">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
