--- a/public/main.css
+++ b/public/main.css
@@ -67,7 +67,7 @@ img {
 /* MIDD-FRAME */
 .main_frame .midd_frame {
     position: relative;
-    margin-top: 0;
+    margin-top: -53px;
     margin-right: 22px;
     margin-left: 34px;
     width: 970px;
@@ -76,8 +76,317 @@ img {
     flex-direction: column;
 }
 
+/* HERO */
+.hero {
+    position: relative;
+    width: 100%;
+    height: 454px;
+    margin: 0;
+    margin-bottom: 148px;
+    padding: 0;
+    background-color: #fff;
+}
+
+/* BACKGROUN ICONS */
+.el-1 {
+    position: absolute;
+    top: 37px;
+    left: 36px;
+    width: 16px;
+    height: 15px;
+}
+
+.el-2 {
+    position: absolute;
+    left: 84px;
+    bottom: 19px;
+    width: 16px;
+    height: 15px;
+}
+
+.el-3 {
+    position: absolute;
+    right: 438px;
+    top: 59px;
+    width: 16px;
+    height: 15px;
+}
+
+.el-4 {
+    position: absolute;
+    right: 400px;
+    bottom: 60px;
+    width: 16px;
+    height: 15px;
+}
+
+.re-1 {
+    position: absolute;
+    left: 370px;
+    bottom: 102px;
+    width: 16px;
+    height: 15px;
+}
+
+.re-2 {
+    position: absolute;
+    top: 76px;
+    right: 57px;
+    width: 16px;
+    height: 15px;
+}
+
+.po-1 {
+    position: absolute;
+    right: 37px;
+    bottom: 14px;
+    width: 16px;
+    height: 15px;
+}
+
+.hero-wrapper {
+    padding-left: 56px;
+    padding-right: 61px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.hero-about {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero-about h2 {
+    margin: 0;
+    margin-bottom: 17px;
+    padding: 0;
+    font-size: 48px;
+    line-height: 123%;
+    font-weight: 700;
+    color: #2B2B2B;
+}
+
+.hero-about p {
+    margin: 0;
+    margin-bottom: 22px;
+    padding: 0;
+    width: 424px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+}
+
+.hero-btn {
+    margin: 0;
+    padding: 16px 32px;
+    width: 154px;
+    height: 49px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 5px;
+    font-weight: 700;
+    color: #2B2B2B;
+    background-color: #FFB400;
+    text-decoration: none;
+}
+
+.hero-btn:hover {
+    border: 2px solid #FFB400;
+    background-color: #fff;
+}
+
+.hero-btn:active {
+    opacity: 0.6;
+}
+
+.hero-btn_icon {
+    margin: 0;
+    padding: 0;
+    width: 16px;
+    height: 16px;
+}
+
+.hero-img {
+    margin: 0;
+    margin-bottom: -16px;
+    width: 326px;
+    height: 446px;
+    object-fit: contain;
+}
+
+
+/* FEATURE */
+.feature {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.feature-title {
+    margin: 0;
+    margin-bottom: 26px;
+    padding: 0;
+    font-size: 32px;
+    line-height: 123%;
+    font-weight: bold;
+    color: #2B2B2B;
+}
+
+.feature-text {
+    margin: 0;
+    margin-bottom: 50px;
+    padding: 0;
+    width: 438px;
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: 400;
+}
+
+.box-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.box {
+    margin: 0;
+    padding: 0;
+    width: 310px;
+    height: 225px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #fff;
+    text-align: center;
+}
+
+.box:not(:nth-child(3), :nth-child(6)) {
+    margin-right: 20px;
+}
+
+.box:not(:nth-child(4), :nth-child(5), :nth-child(6)) {
+    margin-bottom: 20px;
+}
+
+
+.box h2 {
+    margin: 0;
+    margin-bottom: 15px;
+    padding: 0;
+    font-size: 18px;
+    line-height: 123%;
+    font-weight: 500;
+    color: #2B2B2B;
+    text-transform: capitalize;
+}
+
+.box p {
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: 400;
+    text-transform: capitalize;
+    
+}
+
+.box-1 {
+    padding-top: 28px;
+}
+
+.box-1 img {
+    margin-bottom: 26px;
+    width: 68px;
+    height: 68px;
+    object-fit: contain;
+}
+
+.box-2 {
+    padding-top: 28px;
+}
+
+.box-2 img {
+    margin-bottom: 26px;
+    width: 68px;
+    height: 68px;
+    object-fit: contain;
+}
+
+.box-3 {
+    padding-top: 25px;
+}
+
+.box-3 img {
+    margin-bottom: 23px;
+    width: 74px;
+    height: 74px;
+    object-fit: contain;
+}
+
+.box-4 {
+    padding-top: 33px;
+}
+
+.box-4 img {
+    margin-bottom: 21px;
+    width: 74px;
+    height: 74px;
+    object-fit: contain;
+}
+
+.box-5 {
+    padding-top: 25px;
+}
+
+.box-5 img {
+    margin-bottom: 25px;
+    width: 74px;
+    height: 74px;
+    object-fit: contain;
+}
+
+.box-6 {
+    padding-top: 31px;
+}
+
+.box-6 p {
+    width: 260px;
+    margin-bottom: 15px;
+}
+
+.box-link {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    line-height: normal;
+    font-weight: bold;
+    color: #FFB400;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.box-link img {
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+}
+
+
 /* RIGHT-FRAME */
 .main_frame .right_frame {
+    padding-top: 50px;
     position: relative;
     width: 108px;
     height: 1315px;
@@ -85,6 +394,78 @@ img {
     align-items: center;
     flex-direction: column;
     background-color: #fff;
+}
+
+.right_frame-img {
+    padding: 0;
+    margin-bottom: 212px;
+    width: 30px;
+    height: 30px;
+    object-fit: contain;
+    cursor: pointer;
+}
+
+.menu {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.menu-item {
+    position: relative;
+    margin: 0;
+    padding: 11px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #F0F0F6;
+    cursor: pointer;
+}
+
+.menu-item:not(:last-child) {
+    margin-bottom: 43px;
+}
+
+.tooltip {
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 6px;
+    border-style: solid;
+    border-color: #333 transparent transparent transparent;
+}
+
+.menu-item:hover {
+    background-color: #FFB400;
+}
+
+.menu-item:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu-item:active {
+    opacity: 0.6;
 }
 
 
@@ -130,6 +511,15 @@ img {
     filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
     background-color: #FFB400;
     color: #2B2B2B;
+}
+
+.social_media a:hover {
+    border: 2px solid #FFB400;
+    background-color: #fff;
+}
+
+.social_media a:active {
+    opacity: 0.6;
 }
 
 .social_media a:not(:last-child) {
