feat: CRUD operations

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -9,19 +9,36 @@
 <body style="background-color: #b8bbd1;">
     <div class="container">
         <h1 class="display-4 text-center py-1">REJA VA MAQSADLAR</h1>
-
+        
         <div class="jumbotron p-3 shadow-sm" style="margin-bottom: 20px;">
             <form id="create-form" action="/create-item" method="post">
                 <div class="d-flex align-items-center">
-                    <input type="text" class="form-control mr-3" id="create-field" name="item" placeholder="Item Name" autofocus autocomplete="off" style="flex: 1; margin-right: 15px;">
+                    <input type="text" class="form-control mr-3" id="create-field" name="reja" placeholder="Item Name" autofocus autocomplete="off" style="flex: 1; margin-right: 15px;">
                     <button class="btn btn-primary" style="border-radius: 20px;">Yangi Reja Qo'shish</button>
                 </div>
             </form>
         </div>
-
+        
+        
+        <ul id="item-list" class="list-group pb-5">
+            <% items.map((item) => { %>
+                <li class="list-group-item list-group-item-info d-flex align-items-center justify-content-between">
+                    <span class="item-text"><%= item.reja %></span>
+                    <div>
+                        <button data-id="<%= item._id %>" class="edit-me btn btn-secondary btn-sm mr-1">
+                            O'zgartirish
+                        </button>
+                        <button data-id="<%= item._id %>" class="delete-me btn btn-danger btn-sm">
+                            O'chirish
+                        </button>
+                    </div>
+                </li>
+            <% }) %>
+        </ul>
+        
         <button id="clear-all" class="btn btn-danger" style="border-radius: 20px;">
             Hamma Rejalarni O'chirish
         </button>
-    </div>
-</body>
-</html>
+        </div>
+    </body>
+    </html>
