feat: build FrontEnd javascript

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -33,12 +33,15 @@
                         </button>
                     </div>
                 </li>
-            <% }) %>
-        </ul>
-        
-        <button id="clear-all" class="btn btn-danger" style="border-radius: 20px;">
-            Hamma Rejalarni O'chirish
-        </button>
+                <% }) %>
+            </ul>
+            
+            <button id="clear-all" class="btn btn-danger" style="border-radius: 20px;">
+                Hamma Rejalarni O'chirish
+            </button>
         </div>
+        
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="/browser.js"></script>
     </body>
     </html>
